apps/nginx/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-http-route
spec:
  parentRefs:
    - name: default
      namespace: default
      sectionName: https
  hostnames:
    - "nginx.home.arpa"
  rules:
    - backendRefs:
        - name: nginx-svc
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
